--- a/package.json
+++ b/package.json
@@ -13,15 +13,22 @@
   "devDependencies": {
     "@types/jest": "^29.5.12",
     "@types/node": "20.11.19",
+    "@types/uuid": "^9.0.8",
+    "aws-cdk": "2.133.0",
+    "esbuild": "^0.20.2",
     "jest": "^29.7.0",
     "ts-jest": "^29.1.2",
-    "aws-cdk": "2.133.0",
     "ts-node": "^10.9.2",
     "typescript": "~5.3.3"
   },
   "dependencies": {
+    "@aws-sdk/client-dynamodb": "^3.540.0",
+    "@aws-sdk/lib-dynamodb": "^3.552.0",
     "aws-cdk-lib": "2.133.0",
     "constructs": "^10.0.0",
-    "source-map-support": "^0.5.21"
+    "js-tiktoken": "^1.0.10",
+    "source-map-support": "^0.5.21",
+    "tiktoken": "^1.0.13",
+    "uuid": "^9.0.1"
   }
 }
