--- a/tsconfig.json
+++ b/tsconfig.json
@@ -20,6 +20,7 @@
     "inlineSources": true,
     "experimentalDecorators": true,
     "strictPropertyInitialization": false,
+    "esModuleInterop": true, // ADD
     "typeRoots": [
       "./node_modules/@types"
     ]
